tests/neg-macros/i18174.check
-- [E172] Type Error: tests/neg-macros/i18174.scala:27:33 --------------------------------------------------------------
27 |  (charClassIntersection.rep() | classItem.rep()) // error
   |                                 ^^^^^^^^^^^^^^^
   |No given instance of type pkg.Implicits.Repeater[pkg.RegexTree, V] was found.
   |I found:
   |
   |    pkg.Implicits.Repeater.GenericRepeaterImplicit[T]
   |
   |But method GenericRepeaterImplicit in object Repeater does not match type pkg.Implicits.Repeater[pkg.RegexTree, V]
   |
   |where:    V is a type variable with constraint <: Seq[pkg.CharClassIntersection]
   |.
